# UPL25

upl25/hw02/: dune  hw2.ml
upl25/hw02/_build/: .db  .digest-db  log
upl25/hw02/_build/default/: hw2.pp.ml  hw2_grading_test.ml  hw2_grading_test.pp.ml  hw2_test.cmxa  hw2_test.ml-gen
upl25/hw03/: hw3.ml  hw3_example_test.ml
upl25/hw03/_build/: .db  .digest-db  log
upl25/hw03/_build/default/: hw2_test.cmxa  hw2_test.ml-gen  hw3.ml  hw3.pp.ml  hw3_example_test.pp.ml
upl25/hw04/: dune  hw4.ml  hw4_example_test.ml
upl25/hw05/: dune  hw5.ml  hw5_test.ml  store.ml
upl25/hw06/: dune  fstore.ml  hw6.ml  hw6_test.ml  store.ml
upl25/hw07/: dune  hw7_share_test.ml
upl25/hw07/_build/: .db  .digest-db  log
upl25/hw07/_build/default/: hw7.ml  hw7.pp.ml  hw7_share_test.pp.ml  hw7_test.cmxa  hw7_test.ml-gen  store.pp.ml
upl25/hw09/: dune  store.ml
upl25/hw09/_build/: .db  .digest-db  log
upl25/hw09/_build/default/: coverage_test.ml  coverage_test.pp.ml  hw9.ml  hw9.pp.ml  hw9__.ml-gen  store.pp.ml
upl25/hw1/: =  dune
upl25/hw1/_build/: log
upl25/hw1/_build/default/: hw1.ml  hw1.pp.ml  hw1_test.cmxa  hw1_test.ml  hw1_test.pp.ml  hw1_test__.ml-gen
upl25/hw10/: dune  dune-project  hw10.ml  hw10_share_test.ml  store.ml
upl25/prac/: dune  tes.ml
upl25/prac/_build/: log
upl25/prac/_build/default/: tes.ml
upl25/prac1/: dune  tes.ml
upl25/prac1/_build/: .db  .digest-db  log
upl25/prac1/_build/default/: foo.ml  foo.pp.ml  foo_test.cmxa  foo_test.ml  foo_test.pp.ml  foo_test__.ml-gen  helloworld.ml  helloworld.pp.ml  tes.pp.ml
(+144 files in other folders)
