(include_subdirs unqualified)

(library
  (name hw9)
  (modules hw9) 
  (libraries ast store parserMain)
  (instrumentation (backend bisect_ppx))
)

(library
  (name store)
  (modules store)
  (libraries ast)
)

(library
  (name ast)
  (modules ast)
)

(library
  (name parserMain)
  (modules parserMain parser lexer)
  (libraries ast)
)

(library
  (name hw9_test)
  (inline_tests)
  (modules hw9_test)
  (libraries hw9)
  (preprocess (pps ppx_inline_test))
)
